<resources>
    <string name="AboutText">KeePassDroid is an Android implementation of the KeePass password manager.</string>
    <string name="Android11FileNotFound">The file was not found. Google recently started enforcing restrictions on file access to internal storage in Android 11 and later. This causes many of the old file URLs to fail. Try going back to the first screen in the app and using the open button to access the file through the Android file selection dialog.</string>
    <string name="Android11SaveFailed">The file could not be saved. Google recently started enforcing restrictions on file access to internal storage in Android 11 and later. This causes many of the old file URLs to fail. Try going back to the first screen in the app and using the open button to access the file through the Android file selection dialog.</string>
    <string name="ClearClipboard">Clipboard cleared.</string>
    <string name="FileNotFound">File not found.</string>
    <string name="InvalidPassword">Invalid password or key file.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_feedback">Feedback:</string>
    <string name="about_homepage">Homepage:</string>
    <string name="about_twitter">Twitter:</string>
    <string name="accept">Accept</string>
    <string name="add_entry">Add entry</string>
    <string name="add_group">Add group</string>
    <string name="add_group_title">Add Group</string>
    <string name="add_string">Add string</string>
    <string name="algorithm">Algorithm</string>
    <string name="algorithm_key">algorithm</string>
    <string name="app_key">app</string>
    <string name="app_name">KeePassDroid</string>
    <string name="app_timeout">Application timeout</string>
    <string name="app_timeout_key">app_timeout_key</string>
    <string name="app_timeout_summary">Time before locking database when the application is inactive.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application">Application</string>
    <string name="application_settings">Application settings</string>
    <string name="beta_dontask">"Don't show again"</string>
    <string name="biometric_auth_error">Authentication error</string>
    <string name="biometric_auth_failed">Failed to authenticate biometric</string>
    <string name="biometric_auth_failed_store">Failed to authenticate, password was not stored</string>
    <string name="biometric_auth_to_open">Authenticate to open database</string>
    <string name="biometric_auth_to_store">Authenticate to store password</string>
    <string name="biometric_auto_open">Automatically prompt for biometric login when opening file.</string>
    <string name="biometric_auto_open_title">Automatic biometric Login</string>
    <string name="biometric_autoscan_key">fingerprint_autoscan_key</string>
    <string name="biometric_clear_stored_password">Clear Stored Password</string>
    <string name="biometric_error">Biometric error</string>
    <string name="biometric_invalidated">Biometric invalidated</string>
    <string name="biometric_open_db">Open Database</string>
    <string name="biometric_save_password">Save Password</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brackets">Brackets</string>
    <string name="browser_intall_text">File browsing requires the Open Intents File Manager, click below to install it. Due to some quirks in the file manager, browsing may not work correctly, the first time you browse.</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_error">Some Samsung Android phones have a bug in the clipboard implementation that causes copying from applications to fail. For more details go to:</string>
    <string name="clipboard_error_clear">Clearing the clipboard failed</string>
    <string name="clipboard_error_title">Clipboard error</string>
    <string name="clipboard_error_url">http://code.google.com/p/android/issues/detail?id=35732</string>
    <string name="clipboard_timeout">Clipboard timeout</string>
    <string name="clipboard_timeout_default">300000</string>
    <string name="clipboard_timeout_key">clip_timeout_key</string>
    <string name="clipboard_timeout_summary">Time before clearing clipboard after copying username or password</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="copy">Copy</string>
    <string name="copy_password">Select to copy password to clipboard</string>
    <string name="copy_username">Select to copy username to clipboard</string>
    <string name="creating_db_key">Creating database key…</string>
    <string name="database">Database</string>
    <string name="db_key">db</string>
    <string name="decrypting_db">Decrypting database contents…</string>
    <string name="default_checkbox">Use this as my default database</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_file_path">/keepass/keepass.kdbx</string>
    <string name="digits">Digits</string>
    <string name="disclaimer_formal">KeePassDroid Copyright 2009–2022 Brian Pellin comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL version 2 or later.</string>
    <string name="donate_url">https://www.paypal.com/donate/?hosted_button_id=VZ8PF244V7VAS</string>
    <string name="ellipsis">…</string>
    <string name="encrypted_value_stored">Encrypted password stored</string>
    <string name="enter_filename">Enter database filename:</string>
    <string name="entry_accessed">Accessed:</string>
    <string name="entry_and_or">Enter a password and/or a key file to unlock your database:</string>
    <string name="entry_cancel">Cancel</string>
    <string name="entry_comment">Comments:</string>
    <string name="entry_confpassword">Confirm password:</string>
    <string name="entry_created">Created:</string>
    <string name="entry_expires">Expires:</string>
    <string name="entry_keyfile">Key file (optional)</string>
    <string name="entry_modified">Modified:</string>
    <string name="entry_not_found">Entry data not found.</string>
    <string name="entry_password">Password:</string>
    <string name="entry_save">Save</string>
    <string name="entry_title">Name:</string>
    <string name="entry_url">URL:</string>
    <string name="entry_user_name">User Name:</string>
    <string name="error_arc4">The ArcFour stream cipher is not supported.</string>
    <string name="error_can_not_handle_uri">KeePassDroid cannot handle this uri.</string>
    <string name="error_could_not_create_parent">Could not create parent directory.</string>
    <string name="error_database_exists">This file already exists.</string>
    <string name="error_failed_to_launch_link">Failed to launch link.</string>
    <string name="error_file_not_create">Could not create file:</string>
    <string name="error_filename_required">A filename is required.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_invalid_db">Invalid database.</string>
    <string name="error_invalid_path">Invalid path.</string>
    <string name="error_no_name">A name is required.</string>
    <string name="error_nopass">A password or a keyfile is required.</string>
    <string name="error_out_of_memory">The phone ran out of memory while parsing your database. It may be too large for your phone.</string>
    <string name="error_pass_gen_type">At least one password generation type must be selected</string>
    <string name="error_pass_match">Passwords do not match.</string>
    <string name="keyfile_key">keyfile</string>
    <string name="list_size_default">28</string>
    <string name="list_size_key">list_size</string>
    <string name="list_size_summary">Text size in the group list</string>
    <string name="list_size_title">Group list size</string>
    <string name="maskpass_key">maskpass</string>
    <string name="maskpass_summary">Hide passwords by default</string>
    <string name="maskpass_title">Mask password</string>
    <string name="menu_copy_pass">Copy Password</string>
    <string name="menu_copy_user">Copy User</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_lock">Lock Database</string>
    <string name="menu_showpass">Show pass</string>
    <string name="menu_url">Go to URL</string>
    <string name="omitbackup_key">omitbackup</string>
    <string name="omitbackup_summary">"Omit 'Backup' group from search results (applies to .kdb only)"</string>
    <string name="omitbackup_title">"Don't search backup entries"</string>
    <string name="recentfile_key">recentfile</string>
    <string name="recentfile_summary">Remember recently used file names</string>
    <string name="recentfile_title">Recent file history</string>
    <string name="remember_keyfile_summary">Remembers the location of keyfiles</string>
    <string name="remember_keyfile_title">Save keyfile</string>
    <string name="roundsFix_key">roundsFix</string>
    <string name="rounds_fix">Key encryption rounds before corruption</string>
    <string name="rounds_fix_explaination">If your database was corrupted by KeePassDroid version 2.2.0.0 to 2.2.0.6, enter the number of rounds used previously and this will allow you to open your database.</string>
    <string name="saf_key">storage_access_framework_key</string>
    <string name="use_saf_summary">Use Android Storage Access Framework for file browsing (KitKat and later)</string>
    <string name="use_saf_title">Storage access framework</string>
</resources>