<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference app:defaultValue="@bool/recentfile_default" app:key="@string/recentfile_key" app:summary="@string/recentfile_summary" app:title="@string/recentfile_title" />
    <CheckBoxPreference app:defaultValue="@bool/keyfile_default" app:dependency="@string/recentfile_key" app:key="@string/keyfile_key" app:summary="@string/remember_keyfile_summary" app:title="@string/remember_keyfile_title" />
    <ListPreference app:defaultValue="@string/clipboard_timeout_default" app:dialogTitle="@string/clipboard_timeout" app:entries="@array/clipboard_timeout_options" app:entryValues="@array/clipboard_timeout_values" app:key="@string/clipboard_timeout_key" app:summary="@string/clipboard_timeout_summary" app:title="@string/clipboard_timeout" />
    <ListPreference app:defaultValue="@string/clipboard_timeout_default" app:dialogTitle="@string/app_timeout" app:entries="@array/clipboard_timeout_options" app:entryValues="@array/clipboard_timeout_values" app:key="@string/app_timeout_key" app:summary="@string/app_timeout_summary" app:title="@string/app_timeout" />
    <CheckBoxPreference app:defaultValue="@bool/maskpass_default" app:key="@string/maskpass_key" app:summary="@string/maskpass_summary" app:title="@string/maskpass_title" />
    <ListPreference app:defaultValue="@string/list_size_default" app:dialogTitle="@string/list_size_summary" app:entries="@array/list_size_options" app:entryValues="@array/list_size_values" app:key="@string/list_size_key" app:summary="@string/list_size_summary" app:title="@string/list_size_title" />
    <CheckBoxPreference app:defaultValue="@bool/omitbackup_default" app:key="@string/omitbackup_key" app:summary="@string/omitbackup_summary" app:title="@string/omitbackup_title" />
    <CheckBoxPreference app:defaultValue="@bool/saf_default" app:key="@string/saf_key" app:summary="@string/use_saf_summary" app:title="@string/use_saf_title" />
    <com.keepassdroid.settings.LongEditTextPreference android:inputType="number" app:key="@string/roundsFix_key" app:summary="@string/rounds_fix_explaination" app:title="@string/rounds_fix" />
    <CheckBoxPreference android:title="@string/biometric_auto_open_title" android:key="@string/biometric_autoscan_key" android:summary="@string/biometric_auto_open" android:defaultValue="@bool/biometric_autoscan" />
</PreferenceScreen>